echo
   Compiling neomind-extension-sdk v0.6.1 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-extension-sdk)
   Compiling neomind-extension-sdk v0.6.1 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-extension-sdk)
   Compiling neomind-core v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-core)
   Compiling neomind-core v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-core)
   Compiling neomind-storage v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-storage)
   Compiling neomind-storage v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-storage)
   Compiling neomind-devices v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-devices)
   Compiling neomind-devices v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-devices)
   Compiling neomind-messages v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-messages)
   Compiling neomind-messages v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-messages)
   Compiling neomind-rules v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-rules)
   Compiling neomind-rules v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-rules)
   Compiling   Compiling neomind-agent v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-agent)
 neomind-agent v0.6.2 (/Users/shenmingming/CamThink Project/NeoMind/crates/neomind-agent)
error[E0308]: mismatched types
   --> crates/neomind-agent/src/toolkit/aggregated.rs:287:24
    |
287 |error[E0308]: mismatched types
   --> crates/neomind-agent/src/toolkit/aggregated.rs:287:24
    |
287 |                 .query(device_id, m, start_time, end_time)
    |                  ----- ^^^^^^^^^ expected `&str`, found `String`
    |                  |
    |                  arguments to this method are incorrect
    |
note: method defined here
   --> /Users/shenmingming/CamThink Project/NeoMind/crates/neomind-devices/src/telemetry.rs:195:18
    |
195 |     pub async fn query(
    |                  ^^^^^
help: consider borrowing here
    |
287 |                 .query(&device_id, m, start_time, end_time)
    |                        +

                 .query(device_id, m, start_time, end_time)
    |                  ----- ^^^^^^^^^ expected `&str`, found `String`
    |                  |
    |                  arguments to this method are incorrect
    |
note: method defined here
   --> /Users/shenmingming/CamThink Project/NeoMind/crates/neomind-devices/src/telemetry.rs:195:18
    |
195 |     pub async fn query(
    |                  ^^^^^
help: consider borrowing here
    |
287 |                 .query(&device_id, m, start_time, end_time)
    |                        +

For more information about this error, try `rustc --explain E0308`.
For more information about this error, try `rustc --explain E0308`.
error: could not compile `neomind-agent` (lib) due to 1 previous error
error: could not compile `neomind-agent` (lib) due to 1 previous error
